Jump improvements - fixes 58
- Save scrollTop
- extra space
- CSS transitions on highlight

--- a/css/main.css
+++ b/css/main.css
@@ -156,6 +156,16 @@ a:not( .footnote ) {
   text-decoration: none;
 }
 
+.references .footnote {
+  background-color: #fff;
+  transition: background-color 3s;
+}
+
+.references .footnote.highlight {
+  background-color: rgba(1, 155, 139, 0.2);
+  transition: background-color .5s;
+}
+
 /* HEADER */
 
 header{
